--- a/content/var.ipynb
+++ b/content/var.ipynb
@@ -110,7 +110,7 @@
     "from pandas.plotting import register_matplotlib_converters\n",
     "register_matplotlib_converters()\n",
     "\n",
-    "api_key = '1XTW'"
+    "api_key = 'XXXX'"
    ]
   },
   {
